<resources>
    <string name="app_name">Travel Partner</string>
    <string name="countries">Countries</string>
    <string name="translation">Translation</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="phrases">Phrases</string>
    <string name="touristPlaces">Tourist Places</string>
    <string name="australia">Australia</string>
    <string name="new_zealand">New Zealand</string>
    <string name="colombia">Colombia</string>
    <string name="brazil">Brazil</string>
    <string name="us">United State of America</string>
    <string name="canada">Canada</string>
    <string name="uk">United Kingdom</string>
    <string name="italy">Italy</string>
    <string name="singapore">Singapore</string>
    <string name="india">India</string>
    <string name="mauritius">Mauritius</string>
    <string name="south_africa">South Africa</string>
    <string name="change_map_style">Change Map Style</string>
    <string name="countryFlag">countryflag</string>
    <string name="connection_error">Connection Error :(</string>
    <string name="loading">Loading…</string>
    <string name="officialLanguage">Official Language: %1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be grater than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">"Don't have an account? Register"</string>
    <string name="created_account">"Already have an account? Sign in"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="register">Register</string>
    <string name="ErrorMSGEmail">Please Enter Email</string>
    <string name="ErrorMSGInvEmail">Please Enter Valid Email</string>
    <string name="ErrorMSGPass">Please Enter Password</string>
    <string name="MSGAuthFail">Authentication failed.</string>
    <string name="MSGEnterName">Please enter your name</string>
    <string name="MSGVerifyEmail">Please verify your email address.</string>
    <string name="please_enter_your_name_quiz_dialog">Please enter your name</string>
    <string name="name_quiz_dialog">Name</string>
    <string name="start_quiz_dialog">Start</string>
    <string name="question">Question</string>
    <string name="questionImage">questionImage</string>
    <string name="submit">Submit</string>
    <string name="Option_4">Option 4</string>
    <string name="Option_3">Option 3</string>
    <string name="Option_2">Option 2</string>
    <string name="Option_1">Option 1</string>
    <string name="Pharse">Pharses</string>
    <string name="explanation">Explanation</string>
    <string name="UsPhraseOne">Slang:- Scoot over</string>
    <string name="UsPhraseTwo">Slang:- Break a leg</string>
    <string name="UsPhraseThree">Slang:- Knock on wood</string>
    <string name="UsPhraseFour">Slang:- It\'s not rocket science</string>
    <string name="UsPhraseFive">Slang:- Break a bill</string>
    <string name="UsPhraseSix">Slang:- Let\'s table this</string>
    <string name="UsExplainOne">Explanation:- Americans might casually say this when asking someone to move slightly, but those who aren\'t familiar with the term can be forgiven for not having a clue what the American is asking them to do.</string>
    <string name="UsExplainTwo">Explanation:- When directly translated, this American phrase sounds to a non-English speaker that the speaker is wishing them ill will or putting some kind of curse on them.</string>
    <string name="UsExplainThree">\"Explanation:- Sort of the opposite of break a leg, this expression, said (and done) when someone hopes something happens or continues to happen is common throughout the English speaking world (usually as touch wood outside America). \"</string>
    <string name="UsExplainFour">Explanation:- it\'s not rocket science is a way of explaining something by hyperbolically explaining what it\'s not—in this case, saying something is not too difficult.</string>
    <string name="UsExplainFive">Explanation:- When we want to get change, turning a larger bill into smaller ones, this term can come in handy.</string>
    <string name="UsExplainSix">Explanation:- When you say to table something you mean to shelve it. When I say to table something I mean to put it on the table for discussion.</string>
    <string name="UkPhraseOne">Slang:- Fancy a cuppa?</string>
    <string name="UkPhraseTwo">Slang:- Alright?</string>
    <string name="UkPhraseThree">Slang:- I’m knackered!</string>
    <string name="UkPhraseFour">Slang:- Cheeky</string>
    <string name="UkPhraseFive">Slang:- I’m chuffed to bits!</string>
    <string name="UkPhraseSix">Slang:- To bodge something</string>
    <string name="UkExplainSix">Explanation:- to mend, or repair something clumsily.</string>
    <string name="UkExplainFive">Explanation:- I’m very pleased.</string>
    <string name="UkExplainFour">Explanation:- playful; mischievous</string>
    <string name="UkExplainThree">Explanation:- I’m tired.</string>
    <string name="UkExplainTwo">Explanation:- Hey, how are you?</string>
    <string name="UkExplainOne">Explanation:- Would you like a cup of tea?</string>
    <string name="SaPhraseOne">Slang:- Ag man!</string>
    <string name="SaPhraseTwo">Slang:- Aikona – not on your life</string>
    <string name="SaPhraseThree">Slang:- Boet – brother</string>
    <string name="SaPhraseFour">Slang:- Bra / Bru – friend</string>
    <string name="SaPhraseFive">Slang:- Chow – to eat / food</string>
    <string name="SaPhraseSix">Slang:- Eina! – ouch!</string>
    <string name="SaExplainOne">Explanation:- This is the Afrikaans equivalent to “Oh man!” and is often used at the beginning of a sentence to express pity, resignation or irritation.</string>
    <string name="SaExplainTwo">Explanation:- A Zulu term used to express shock or disbelief when talking to friends or family.</string>
    <string name="SaExplainThree">Explanation:- This term is usually used in reference to a male friend or companion.</string>
    <string name="SaExplainFour">Explanation:- This term is commonly used to call a friend, pal or buddy.</string>
    <string name="SaExplainFive">Explanation:- Often used when talking about food, this term can be used as a verb, meaning to eat, or when talking about the food itself.</string>
    <string name="SaExplainSix">Explanation:- Usually expressed when someone experiences a sharp pain of some sort.</string>
    <string name="SinPhraseOne">Slang:- Ulu (ooh-loo) / out of the way</string>
    <string name="SinPhrasesTwo">Slang:- Tompang (tohm-pung) / hitch a ride</string>
    <string name="SinPhrasesThree">Slang:- Makan (mah-kahn) / eat or food</string>
    <string name="SinPhrasesFour">Slang:- Chope (joh-pe) / reserve</string>
    <string name="SinPhrasesFive">Slang:- Kancheong Spider (kun-chee-ong-spider) / jittery or nervous</string>
    <string name="SinPhrasesSix">Slang:- Jialat! (ji-ah-laht) / very bad!</string>
    <string name="SinExplainOne">Explanation:- In tiny Singapore, any place that requires more than an hour to get to by public transport, or is particularly hard to find, can be considered ‘so ulu’.</string>
    <string name="SinExplainTwo">Explanation:- If someone asks you whether they ‘can tompang?’, they are usually asking you to give them a lift somewhere, or to help them pass an item to someone else.</string>
    <string name="SinExplainThree">Explanation:- This Malay term can be used to describe food (‘makan!’) or the action of having a meal (as in ‘let’s go makan’).</string>
    <string name="SinExplainFour">Explanation:- The Singaporean way of ‘chope-ing’ something is most commonly seen in hawker centres, with tissue packets indicating that the table is taken.</string>
    <string name="SinExplainFive">Explanation:- Someone calling you a ‘kancheong spider’ is basically saying that you need to chill out and not be so nervous about things.</string>
    <string name="SinExplainSix">Explanation:- A Chinese Hokkien term that translates literally as ‘eating strength’, this is a multi-purpose phrase you can use to exclaim about most things bad – whether it’s a person, behaviour or circumstance.</string>
    <string name="NzPhraseOne">Slang:- My bloody car carked it yesterday.</string>
    <string name="NzPhraseTwo">Slang:- That fulla is munted.</string>
    <string name="NzPhraseThree">Slang:- Yep, I’m chocka.</string>
    <string name="NzPhraseFour">Slang:- Pass me the chuddy.</string>
    <string name="NzPhraseFive">Slang:- What a ratbag!</string>
    <string name="NzPhraseSix">Slang:- Mandy is packing a sad.</string>
    <string name="NzExplainOne">Explanation:- My car died yesterday.</string>
    <string name="NzExplainTwo">Explanation:- That guy is drunk.</string>
    <string name="NzExplainThree">Explanation:- Yep, I’m full.</string>
    <string name="NzExplainFour">Explanation:- Pass me the chewing gum.</string>
    <string name="NzExplainFive">Explanation:- What a brat!</string>
    <string name="NzExplainSix">Explanation:- Mandy is upset.</string>
    <string name="MauPhraseOne">Slang:- Alo. Ki manier? Korek?</string>
    <string name="MauPhrasesTwo">Slang:- Bonzour. Mo appel…, kouma ou apele?</string>
    <string name="MauPhrasesThree">Slang:- Azordi, mo finn fer letour lil.</string>
    <string name="MauPhrasesFour">Slang:- Létan-la byen bon zordi.</string>
    <string name="MauPhrasesFive">Slang:- Ki dernie pri ou kapav fer ?</string>
    <string name="MauPhrasesSix">Slang:- Alo, mo kapav koz ek…?</string>
    <string name="MauExplainOne">Explanation:- Hi, how’s it going?</string>
    <string name="MauExplainTwo">Explanation:- Hello. My name is… What is your name?</string>
    <string name="MauExplainThree">Explanation:- Today, I toured the island.</string>
    <string name="MauExplainFour">Explanation:- Nice weather today!.</string>
    <string name="MauExplainFive">Explanation:- Can you lower the price?</string>
    <string name="MauExplainSix">Explanation:- Hello, may I speak to…?</string>
    <string name="ItalyPhrasesOne">Slang:- Che figata (keh fee-GAH-tah)</string>
    <string name="ItalyPhrasesTwo">Slang:- Figurati! (Fee-GUH-rah-tee)</string>
    <string name="ItalyPhrasesThree">Slang:- Che schifo! (keh SKEE-foh)</string>
    <string name="ItalyPhrasesFour">Slang:- Meno Male! (MEH-noh MAH-leh)</string>
    <string name="ItalyPhrasesFive">Slang:- Magari! (mah-GAHR-ee!)</string>
    <string name="ItalyPhrasesSix">Slang:- Basta! (BAH-stah!)</string>
    <string name="ItalyExplainOne">Explanation:- An adventure in Italy done right will leave you with plenty of chances to use and hear, What a cool thing!.</string>
    <string name="ItalyExplainTwo">Explanation:- No worries in Italian.</string>
    <string name="ItalyExplainThree">Explanation:- How disgusting!.</string>
    <string name="ItalyExplainFour">Explanation:- Its translation means less bad, but it’s used like, Thank God!</string>
    <string name="ItalyExplainFive">Explanation:- The Italian counterpart to I wish!, Let’s hope!, or Maybe!</string>
    <string name="ItalyExplainSix">Explanation:- Enough!, That’s it!</string>
    <string name="IndPhraseOne">Slang:- Yaar / Friend</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="settings_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>