<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".QuizDetailActivity">

    <LinearLayout
        android:id="@+id/llQuestionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtview_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:id="@+id/question_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/questionImage"
            android:src="@drawable/question_default" />

        <TextView
            android:id="@+id/option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/border_shape"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/text_size_15"
            tools:text="@string/Option_1" />

        <TextView
            android:id="@+id/option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/border_shape"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/text_size_15"
            tools:text="@string/Option_2" />

        <TextView
            android:id="@+id/option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/border_shape"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/text_size_15"
            tools:text="@string/Option_3" />

        <TextView
            android:id="@+id/option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/border_shape"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/text_size_15"
            tools:text="@string/Option_4" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:background="@drawable/border_shape"
            android:padding="@dimen/padding_15"
            android:text="@string/submit"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>