<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_theme"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_weight="1"
                android:text="@string/settings_dark_mode"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_weight="1"
                android:background="@drawable/border_shape"
                android:drawableLeft="@drawable/ic_baseline_privacy_tip_24"
                android:text="@string/settings_privacy_amp_policy"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_weight="1"
                android:background="@drawable/border_shape"
                android:drawableLeft="@drawable/ic_baseline_library_books_24"
                android:text="@string/settings_terms_amp_conditions"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:layout_weight="1"
                android:background="@drawable/border_shape"
                android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
                android:text="@string/logout"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>